--- a/gamesoldschool/gamesoldschool/pom.xml
+++ b/gamesoldschool/gamesoldschool/pom.xml
@@ -8,15 +8,23 @@
 		<version>2.7.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.gamesoldschool</groupId>
-	<artifactId>gamesoldschool</artifactId>
+	<groupId>org.generation</groupId>
+	<artifactId>blogPessoal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gamesoldschool</name>
-	<description>Projeto da loja de games: games old school</description>
+	<name>blogPessoal</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
